--- a/YukariProject/Yukari/src/main/res/layout/row_check.xml
+++ b/YukariProject/Yukari/src/main/res/layout/row_check.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <CheckBox
@@ -13,6 +13,16 @@
         android:id="@+id/checkBox"
         android:focusable="false"
         android:clickable="false"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginRight="4dp"
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_gravity="center_vertical" />
 
 </LinearLayout>
