--- a/YukariProject/Yukari/src/main/res/layout/row_user.xml
+++ b/YukariProject/Yukari/src/main/res/layout/row_user.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/user_icon"
             android:layout_marginLeft="8dp"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:ellipsize="end"
             android:layout_alignParentRight="true"
         android:layout_marginTop="-2dp" />
