--- a/YukariProject/Yukari/src/main/res/menu/list.xml
+++ b/YukariProject/Yukari/src/main/res/menu/list.xml
@@ -8,6 +8,14 @@
     <item android:id="@+id/action_show_subscriber"
         android:title="保存しているユーザ"
         yukari:showAsAction="never"/>
+    <item android:id="@+id/action_subscribe"
+        android:title="リストを保存"
+        yukari:showAsAction="never"
+        android:visible="false"/>
+    <item android:id="@+id/action_unsubscribe"
+        android:title="リスト保存を解除"
+        yukari:showAsAction="never"
+        android:visible="false"/>
     <item android:id="@+id/action_edit"
         android:title="リストの設定"
         yukari:showAsAction="never"
