--- a/Yukari/src/main/res/values-v11/styles.xml
+++ b/Yukari/src/main/res/values-v11/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--
         Base application theme for API 11+. This theme completely replaces
@@ -22,17 +22,21 @@
         <item name="android:activityCloseExitAnimation">@anim/activity_tweet_close_exit</item>
     </style>
 
-    <style name="AppThemeTranslucent" parent="android:Theme.Holo.Light.NoActionBar">
+    <style name="AppThemeTranslucent" parent="android:Theme.Holo.Light.NoActionBar" tools:ignore="NewApi">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="tweetTextColor">#000</item>
     </style>
 
-    <style name="AppThemeTranslucentBg" parent="android:Theme.Holo.Light.NoActionBar">
+    <style name="AppThemeTranslucentBg" parent="android:Theme.Holo.Light.NoActionBar" tools:ignore="NewApi">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@drawable/preview_bg</item>
         <item name="android:progressBarStyleHorizontal">@style/ProgressBarTranslucentBGTheme</item>
         <item name="tweetTextColor">#000</item>
+    </style>
+
+    <style name="YukariSearchTheme" parent="YukariLightTheme">
+        <item name="actionBarWidgetTheme">@style/YukariDarkTheme</item>
     </style>
 
 </resources>
