--- a/Yukari/src/main/res/values/themes_yukarilighttheme.xml
+++ b/Yukari/src/main/res/values/themes_yukarilighttheme.xml
@@ -3,52 +3,179 @@
 <!-- Generated with http://android-holo-colors.com -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <style name="YukariLightTheme" parent="@style/_YukariLightTheme"/>
+    <style name="YukariLightTheme" parent="@style/_YukariLightTheme" />
 
-  <style name="_YukariLightTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="_YukariLightTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
-      <item name="actionBarStyle">@style/ActionBarYukariTheme</item>
+        <item name="actionBarStyle">@style/ActionBarYukariTheme</item>
 
-      <item name="actionBarWidgetTheme">@style/YukariDarkTheme</item>
+        <item name="actionBarWidgetTheme">@style/YukariDarkTheme</item>
 
-      <item name="actionBarTabStyle">@style/ActionBarTabYukariTheme</item>
+        <item name="actionBarTabStyle">@style/ActionBarTabYukariTheme</item>
 
-      <item name="actionModeBackground">@drawable/key_color</item>
+        <item name="actionModeBackground">@drawable/key_color</item>
 
-    <item name="android:editTextStyle">@style/EditTextYukariLightTheme</item>
+        <item name="android:editTextStyle">@style/EditTextYukariLightTheme</item>
 
-    <item name="android:textColorHighlight">#997849ba</item>
+        <item name="android:textColorHighlight">#997849ba</item>
 
-    <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariLightTheme</item>
+        <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariLightTheme
+        </item>
 
-    <item name="android:checkboxStyle">@style/CheckBoxYukariLightTheme</item>
+        <item name="android:checkboxStyle">@style/CheckBoxYukariLightTheme</item>
 
-    <item name="android:radioButtonStyle">@style/RadioButtonYukariLightTheme</item>
+        <item name="android:radioButtonStyle">@style/RadioButtonYukariLightTheme</item>
 
-    <item name="android:buttonStyle">@style/ButtonYukariLightTheme</item>
+        <item name="android:buttonStyle">@style/ButtonYukariLightTheme</item>
 
-    <item name="android:imageButtonStyle">@style/ImageButtonYukariLightTheme</item>
+        <item name="android:imageButtonStyle">@style/ImageButtonYukariLightTheme</item>
 
-    <item name="android:spinnerStyle">@style/SpinnerYukariLightTheme</item>
+        <item name="android:spinnerStyle">@style/SpinnerYukariLightTheme</item>
 
-    <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItemYukariLightTheme</item>
+        <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItemYukariLightTheme
+        </item>
 
-    <item name="android:progressBarStyleHorizontal">@style/ProgressBarYukariLightTheme</item>
+        <item name="android:progressBarStyleHorizontal">@style/ProgressBarYukariLightTheme</item>
 
-    <item name="android:seekBarStyle">@style/SeekBarYukariLightTheme</item>
+        <item name="android:seekBarStyle">@style/SeekBarYukariLightTheme</item>
 
-    <item name="android:ratingBarStyle">@style/RatingBarYukariLightTheme</item>
+        <item name="android:ratingBarStyle">@style/RatingBarYukariLightTheme</item>
 
-    <item name="android:buttonStyleToggle">@style/ToggleYukariLightTheme</item>
+        <item name="android:buttonStyleToggle">@style/ToggleYukariLightTheme</item>
 
-    <item name="android:listViewStyle">@style/ListViewYukariLightTheme</item>
+        <item name="android:listViewStyle">@style/ListViewYukariLightTheme</item>
 
-    <item name="android:listViewWhiteStyle">@style/ListViewYukariLightTheme.White</item>
+        <item name="android:listViewWhiteStyle">@style/ListViewYukariLightTheme.White</item>
 
-    <item name="android:spinnerItemStyle">@style/SpinnerItemYukariLightTheme</item>
+        <item name="android:spinnerItemStyle">@style/SpinnerItemYukariLightTheme</item>
+
+        <item name="tweetTextColor">#000</item>
+
+        <item name="tweetNormal">@drawable/selector_tweet_normal_background</item>
+        <item name="tweetRetweet">@drawable/selector_tweet_retweet_background</item>
+        <item name="tweetOwn">@drawable/selector_tweet_own_background</item>
+        <item name="tweetMention">@drawable/selector_tweet_mention_background</item>
+
+        <item name="tabTitleColor">@color/key_color</item>
+
+        <item name="profileTweetsDrawable">@drawable/ic_prof_tweets</item>
+        <item name="profileFavoritesDrawable">@drawable/ic_prof_favorite</item>
+        <item name="profileFollowsDrawable">@drawable/ic_prof_follow</item>
+        <item name="profileFollowersDrawable">@drawable/ic_prof_follower</item>
 
 
+        <item name="menuProfileDrawable">@drawable/ic_profile</item>
+        <item name="menuTwilogDrawable">@drawable/ic_twilog</item>
+        <item name="menuFavstarDrawable">@drawable/ic_favorite_m</item>
+        <item name="menuAclogDrawable">@drawable/ic_aclog</item>
+        <item name="menuBacklightDrawable">@drawable/ic_always_light_off</item>
+        <item name="menuReportDrawable">@drawable/ic_feedback</item>
+        <item name="menuSettingDrawable">@drawable/ic_settings</item>
+        <item name="menuQuitDrawable">@drawable/ic_quit</item>
+        <item name="menuReloadDrawable">@drawable/ic_navigation_refresh</item>
 
-  </style>
+        <item name="menuButtonDrawable">@drawable/ic_menu_dark</item>
+    </style>
+
+    <style name="YukariLightDialogTheme" parent="android:Theme.Dialog">
+
+        <item name="android:windowTitleStyle">@style/CompatTextAppearance_DialogWindowTitle</item>
+
+        <item name="android:windowBackground">@drawable/dialog_full_holo_light</item>
+
+        <item name="android:colorBackground">@color/background_light</item>
+        <item name="android:colorForeground">@color/bright_foreground_light</item>
+        <item name="android:colorForegroundInverse">@color/bright_foreground_light_inverse</item>
+        <item name="android:textColorPrimary">@android:color/primary_text_light</item>
+        <item name="android:textColorSecondary">@android:color/secondary_text_light</item>
+        <item name="android:textColorTertiary">@android:color/tertiary_text_light</item>
+        <item name="android:textColorPrimaryInverse">@android:color/primary_text_dark</item>
+        <item name="android:textColorSecondaryInverse">@android:color/secondary_text_dark</item>
+        <item name="android:textColorTertiaryInverse">@android:color/tertiary_text_dark</item>
+        <item name="android:textColorPrimaryNoDisable">@android:color/primary_text_light_nodisable
+        </item>
+        <item name="android:textColorSecondaryNoDisable">
+            @android:color/secondary_text_light_nodisable
+        </item>
+        <item name="android:textColorPrimaryInverseNoDisable">
+            @android:color/primary_text_dark_nodisable
+        </item>
+        <item name="android:textColorSecondaryInverseNoDisable">
+            @android:color/secondary_text_dark_nodisable
+        </item>
+        <item name="android:textColorHint">@color/hint_foreground_light</item>
+        <item name="android:textColorHintInverse">@color/hint_foreground_dark</item>
+        <item name="android:textColorLink">@color/link_text_light</item>
+
+        <item name="actionBarStyle">@style/ActionBarYukariTheme</item>
+
+        <item name="actionBarWidgetTheme">@style/YukariDarkTheme</item>
+
+        <item name="actionBarTabStyle">@style/ActionBarTabYukariTheme</item>
+
+        <item name="actionModeBackground">@drawable/key_color</item>
+
+        <item name="android:editTextStyle">@style/EditTextYukariLightTheme</item>
+
+        <item name="android:textColorHighlight">#997849ba</item>
+
+        <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariLightTheme
+        </item>
+
+        <item name="android:checkboxStyle">@style/CheckBoxYukariLightTheme</item>
+
+        <item name="android:radioButtonStyle">@style/RadioButtonYukariLightTheme</item>
+
+        <item name="android:buttonStyle">@style/ButtonYukariLightTheme</item>
+
+        <item name="android:imageButtonStyle">@style/ImageButtonYukariLightTheme</item>
+
+        <item name="android:spinnerStyle">@style/SpinnerYukariLightTheme</item>
+
+        <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItemYukariLightTheme
+        </item>
+
+        <item name="android:progressBarStyleHorizontal">@style/ProgressBarYukariLightTheme</item>
+
+        <item name="android:seekBarStyle">@style/SeekBarYukariLightTheme</item>
+
+        <item name="android:ratingBarStyle">@style/RatingBarYukariLightTheme</item>
+
+        <item name="android:buttonStyleToggle">@style/ToggleYukariLightTheme</item>
+
+        <item name="android:listViewStyle">@style/ListViewYukariLightTheme</item>
+
+        <item name="android:listViewWhiteStyle">@style/ListViewYukariLightTheme.White</item>
+
+        <item name="android:spinnerItemStyle">@style/SpinnerItemYukariLightTheme</item>
+
+        <item name="tweetTextColor">#000</item>
+
+        <item name="tweetNormal">@drawable/selector_tweet_normal_background</item>
+        <item name="tweetRetweet">@drawable/selector_tweet_retweet_background</item>
+        <item name="tweetOwn">@drawable/selector_tweet_own_background</item>
+        <item name="tweetMention">@drawable/selector_tweet_mention_background</item>
+
+        <item name="tabTitleColor">@color/key_color</item>
+
+        <item name="tweetCountColor">@color/count_safe</item>
+        <item name="tweetCountOverColor">@color/count_error</item>
+
+        <item name="selectorTextColor">@color/selector_key_light_textcolor</item>
+
+        <item name="menuButtonDrawable">@drawable/ic_menu_dark</item>
+        <item name="searchButtonDrawable">@drawable/ic_search</item>
+
+        <item name="tweetAttachDrawable">@drawable/ic_content_picture</item>
+        <item name="tweetShotDrawable">@drawable/ic_access_camera</item>
+        <item name="tweetTagDrawable">@drawable/ic_hashtag</item>
+        <item name="tweetGrassDrawable">@drawable/ic_grass</item>
+        <item name="tweetPointDrawable">@drawable/ic_santen</item>
+        <item name="tweetDraftDrawable">@drawable/ic_list</item>
+        <item name="tweetReplyDrawable">@drawable/ic_reply_b</item>
+        <item name="tweetVoiceDrawable">@drawable/ic_voice_input</item>
+        <item name="tweetMorseDrawable">@drawable/ic_morse</item>
+        <item name="tweetNowPlayingDrawable">@drawable/ic_playing_music</item>
+    </style>
 
 </resources>
