--- a/YukariProject/Yukari/src/main/res/values-v9/themes_yukaridarktheme.xml
+++ b/YukariProject/Yukari/src/main/res/values-v9/themes_yukaridarktheme.xml
@@ -3,7 +3,7 @@
 <!-- Generated with http://android-holo-colors.com -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <style name="YukariDarkTheme" parent="Theme.AppCompat">
+  <style name="YukariDarkTheme" parent="@style/_YukariDarkTheme">
 
     <item name="android:textSelectHandleLeft">@drawable/yukaridarktheme_text_select_handle_left</item>
     <item name="android:textSelectHandleRight">@drawable/yukaridarktheme_text_select_handle_right</item>
