ScreenNameで検索ボタンを実装した

--- a/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/Yukari/src/main/res/layout/fragment_profile.xml
@@ -36,8 +36,7 @@
             android:layout_below="@+id/progressBar"
             android:layout_gravity="center"
             android:layout_toRightOf="@+id/ibProfileMenu"
-            android:src="@drawable/ic_search"
-            android:visibility="invisible" />
+            android:src="?attr/searchButtonDrawable"/>
 
         <Button
             android:id="@+id/btnProfileFollow"
