ナローモードを実装してみた
これは仮のもので本来はWi-Fi接続状況なども考慮したうえで最適な通信プランで通信を行えるようにしたいところ

--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -160,6 +160,11 @@
             android:title="受信アカウントの表示"
             android:summary="ツイートを受信したアカウントを表示します"
             android:defaultValue="false" />
+        <CheckBoxPreference
+            android:key="pref_narrow"
+            android:title="ナローモード(仮)"
+            android:summary="TLのアイコン品質とREST APIでの受信件数を落とします"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="アプリについて">
