--- a/Yukari/src/main/res/values-v11/themes_yukarilighttheme.xml
+++ b/Yukari/src/main/res/values-v11/themes_yukarilighttheme.xml
@@ -87,6 +87,7 @@
         <item name="menuSettingDrawable">@drawable/ic_settings</item>
         <item name="menuQuitDrawable">@drawable/ic_quit</item>
         <item name="menuReloadDrawable">@drawable/ic_navigation_refresh</item>
+        <item name="menuBookmarkDrawable">@drawable/ic_bookmark</item>
 
         <item name="menuButtonDrawable">@drawable/ic_menu_dark</item>
         <item name="searchButtonDrawable">@drawable/ic_search</item>
