--- a/Yukari/src/main/res/values/themes_yukaridarktheme.xml
+++ b/Yukari/src/main/res/values/themes_yukaridarktheme.xml
@@ -72,6 +72,7 @@
         <item name="menuSettingDrawable">@drawable/ic_settings_d</item>
         <item name="menuQuitDrawable">@drawable/ic_quit_d</item>
         <item name="menuReloadDrawable">@drawable/ic_navigation_refresh_d</item>
+        <item name="menuBookmarkDrawable">@drawable/ic_bookmark_d</item>
 
         <item name="menuButtonDrawable">@drawable/ic_menu_dark_d</item>
         <item name="searchButtonDrawable">@drawable/ic_search_d</item>
